# crox

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
benches/: crox.rs  parser.rs  scanner.rs
src/: ast.rs  builtin.rs  call.rs  context.rs  env.rs  error.rs  eval.rs  expr.rs  frontend.rs  interp.rs  lib.rs  main.rs  members.rs  node.rs  oop.rs  parser.rs  repl.rs  resolver.rs  rule.rs  scanner.rs  stmt.rs  timing.rs  token.rs  typer.rs  util.rs  value.rs
tests/: classes.tokens  control_flow.crox  control_flow.tokens  expressions.tokens  functions.tokens  hello_world.crox  hello_world.tokens  scanner.rs  snapshot.rs  statements.tokens  tests.rs  types.crox  types.tokens  unexpected_character.lox  variables.crox  variables.tokens
tests/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  to_this.lox  undefined.lox
tests/call/: bool.lox  nil.lox  num.lox  object.lox  string.lox
tests/class/: inherit_self.lox  local_inherit_self.lox
tests/closure/: closure_as_value.lox  closure_global_shadowing.lox  closure_higher_order.lox
tests/constructor/: call_init_early_return.lox  call_init_explicitly.lox  default.lox  default_arguments.lox  early_return.lox  extra_arguments.lox  missing_arguments.lox  return_in_nested_function.lox  return_value.lox
tests/expressions/: parse.lox
tests/field/: call_nonfunction_field.lox  get_on_bool.lox  get_on_class.lox  get_on_function.lox  get_on_nil.lox  get_on_num.lox  get_on_string.lox  getter.lox  getter_call.lox  getter_closure.lox  getter_empty.lox  getter_global.lox  set_evaluation_order.lox  set_on_bool.lox  set_on_class.lox  set_on_function.lox  set_on_nil.lox  set_on_num.lox  set_on_string.lox  undefined.lox
tests/for/: class_in_body.lox  fun_in_body.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  var_in_body.lox
tests/function/: body_must_be_block.lox  extra_arguments.lox  local_mutual_recursion.lox  missing_arguments.lox  missing_comma_in_parameters.lox  print.lox  too_many_arguments.lox  too_many_parameters.lox
tests/if/: class_in_else.lox  class_in_then.lox  fun_in_else.lox  fun_in_then.lox  var_in_else.lox  var_in_then.lox
tests/inheritance/: inherit_class_method.lox  inherit_class_method_on_instance.lox  inherit_class_method_shadowing.lox  inherit_from_function.lox  inherit_from_nil.lox  inherit_from_number.lox  parenthesized_superclass.lox
tests/method/: bound_class_method.lox  class_method.lox  class_method_on_instance.lox  class_method_shadow_instance.lox  class_method_use_this.lox  extra_arguments.lox  (+5 more)
(+70 files in other folders)
