[package]
name = "crox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
chumsky = { version = "0.8.0", optional = true }
miette = { version = "5.5.0", optional = true, features = ["fancy"] }
nom = { version = "7.1.2", optional = true }

[features]
default = ["fancy"]
chumsky = ["dep:chumsky"]
fancy = ["dep:miette"]
nom = ["dep:nom"]


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[dev-dependencies]
once_cell = "1.17.0"
pretty_assertions = "1.3.0"
regex = "1.7.0"
walkdir =  "2.3.2"

