[package]
name = "crox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
chrono = "0.4.23"
clap = { version = "4.1.1", default_features = false, features = ["std", "help"] }
crossterm = "0.24"  # keep version in sync with reedline
directories = "4.0.1"
miette = { version = "5.5.0", features = ["fancy"] }
nu-ansi-term = "0.46.0"
reedline = { version = "0.14.0", features = ["system_clipboard", "sqlite-dynlib"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[dev-dependencies]
once_cell = "1.17.0"
pretty_assertions = "1.3.0"
regex = "1.7.1"
walkdir =  "2.3.2"

